# workforce_scheduling

./: .gitignore  README.md  pyproject.toml
UTA/: Classification_instances.csv  Classification_instances_coeff_appris.csv  Preorder_instance.csv  UTA.py  UTA_functions.py  medium_instance_pareto.csv
example/: Classification_instances_coeff_appris.csv  demo._workforce_scheduling.ipynb
example/data_example/instances_16/: instance_0.json
example/solved_example/medium_instance/: Classification_instances.csv  medium_instance_pareto.csv  preorder_medium_instance.csv  workforce_scheduling12557.npz  workforce_scheduling13142.npz  workforce_scheduling18461.npz  workforce_scheduling18647.npz  workforce_scheduling20171.npz  workforce_scheduling22035.npz  workforce_scheduling23984.npz  workforce_scheduling25818.npz  workforce_scheduling2603.npz  workforce_scheduling29184.npz  workforce_scheduling3149.npz  workforce_scheduling34725.npz  workforce_scheduling34761.npz  workforce_scheduling41418.npz  workforce_scheduling42402.npz  workforce_scheduling44140.npz  workforce_scheduling45101.npz  workforce_scheduling45651.npz  workforce_scheduling4937.npz  workforce_scheduling52146.npz  workforce_scheduling52599.npz  workforce_scheduling53145.npz  workforce_scheduling562.npz  workforce_scheduling58730.npz  (+25 more)
scripts/: generate_instances.py
workforce_scheduling/: __main__.py  lp_model.py  optim.py  plot.py  utils.py
workforce_scheduling/Preferences/: UTA.py  UTA_functions.py
workforce_scheduling/preferences/: minmax_ranking.py  uta.py  uta_utils.py
xtreme_ranking/: minmax_ranking.py
(+33 files in other folders)
